# otio-plugin-template

./: README.md  plugin_manifest.json  pyproject.toml  setup.py
.github/workflows/: build_package.yaml  ci.yaml  create_draft_release.yaml
otio_plugin_template/: plugin_manifest.json
otio_plugin_template/adapters/: my_adapter.py
otio_plugin_template/hooks/: my_hook.py
otio_plugin_template/operations/: my_media_linker.py
otio_plugin_template/schemadefs/: my_schemadef.py
src/your_otio_plugin/hooks/: my_hook.py
tests/: test_my_plugin.py
